--- a/packages/element/tsconfig.doc.json
+++ b/packages/element/tsconfig.doc.json
@@ -1,3 +1,8 @@
-{ "extends": "./tsconfig.json",
-	"compilerOptions": { "noImplicitAny": false }
+{
+	"extends": "./tsconfig.json",
+	"compilerOptions": {
+		"noImplicitAny": false,
+		"noUnusedLocals": false,
+		"allowUnreachableCode": false
+	}
 }
