--- a/packages/documented/package.json
+++ b/packages/documented/package.json
@@ -7,11 +7,14 @@
 	"license": "MIT",
 	"scripts": {
 		"dev": "ts-node ./index.ts",
-		"dev:inspect": "ts-node --inspect ./index.ts"
+		"dev:inspect": "ts-node --inspect ./index.ts",
+		"spec": "mocha --trace-warnings -r ts-node/register \"src/**/*.spec.ts\""
 	},
 	"devDependencies": {
 		"@types/unist": "^1.0.0",
+		"chai": "^4.2.0",
 		"chalk": "^2.4.1",
+		"mocha": "^5.2.0",
 		"nodemon": "^1.18.5",
 		"remark-frontmatter": "^1.3.0",
 		"remark-parse": "^6.0.1",
