--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -74,13 +74,17 @@
 		"@types/express": "^4.16.0",
 		"@types/mocha": "^2.2.45",
 		"@types/raven": "^2.1.3",
+		"@types/semver": "^5.5.0",
 		"@types/sinon-chai": "^2.7.29",
 		"chai": "^4.1.2",
 		"lodash.upperfirst": "^4.3.1",
 		"mocha": "^4.0.1",
 		"run-script-os": "^1.0.3",
+		"semver": "^5.6.0",
 		"sinon": "^4.1.3",
 		"sinon-chai": "^2.14.0",
+		"slug": "^0.9.2",
+		"ts-node": "^7.0.1",
 		"tslint": "^5.5.0",
 		"tslint-config-prettier": "^1.5.0",
 		"tslint-plugin-prettier": "^1.2.0"
