--- a/packages/documented/package.json
+++ b/packages/documented/package.json
@@ -30,6 +30,7 @@
 	"dependencies": {
 		"@types/js-yaml": "^3.11.2",
 		"js-yaml": "^3.12.0",
-		"remark-abbr": "^1.2.1"
+		"remark-abbr": "^1.2.1",
+		"unist-util-visit-parents": "^2.0.1"
 	}
 }
