--- a/packages/element/package.json
+++ b/packages/element/package.json
@@ -79,6 +79,8 @@
 		"chai": "^4.1.2",
 		"lodash.upperfirst": "^4.3.1",
 		"mocha": "^4.0.1",
+		"remark-frontmatter": "^1.3.0",
+		"remark-parse": "^6.0.1",
 		"run-script-os": "^1.0.3",
 		"semver": "^5.6.0",
 		"sinon": "^4.1.3",
@@ -87,7 +89,9 @@
 		"ts-node": "^7.0.1",
 		"tslint": "^5.5.0",
 		"tslint-config-prettier": "^1.5.0",
-		"tslint-plugin-prettier": "^1.2.0"
+		"tslint-plugin-prettier": "^1.2.0",
+		"unified": "^7.0.1",
+		"unist-builder": "^1.0.3"
 	},
 	"prettier": {
 		"semi": false,
