--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
 	},
 	"scripts": {
 		"build:watch": "lerna run build:watch --parallel",
-    "test": "lerna run test",
+		"test": "lerna run test",
 		"publish": "./scripts/publish.sh",
 		"publish:brew": "ts-node --project ./scripts/publish-brew-tap/tsconfig.json -- ./scripts/publish-brew-tap/index.ts",
 		"publish:pre": "lerna publish --force-publish=* --cd-version prerelease && yarn publish:brew",
-		"element": "ts-node -- ./packages/cli/index.ts"
+		"element": "ts-node -- ./packages/cli/index.ts",
+		"docs": "cd packages/element && yarn typedoc && yarn doc:once"
 	},
 	"prettier": {
 		"semi": false,
@@ -45,6 +46,6 @@
 	"workspaces": [
 		"packages/cli",
 		"packages/element",
-    "scripts/publish-brew-tap"
+		"scripts/publish-brew-tap"
 	]
 }
